@@ -3,6 +3,7 @@ degate (0.0.8) unstable; urgency=low
   * Rewritten rendering engine: it uses OpenGL.
   * Added a jpeg image importer.
   * Several bugfixes
+  * Merging of standard cell template images
 	
  -- Martin Schobert <martin@weltregierung.de>  Thu, 15 Apr 2010 09:51:00 +0100
 
